--- a/part1.3.html
+++ b/part1.3.html
@@ -29,8 +29,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="part1.1.html">Part 1</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Part 2</a></li>
-                        <li class="nav-item"><a class="nav-link" href="part1.3.html">Part 3</a></li>
+                        <li class="nav-item"><a class="nav-link" href="part1.2.html">Part 2</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Part 3</a></li>
                     </ul>
                 </div>
             </div>
@@ -40,19 +40,14 @@
             <div class="row">
                 <div class="col-lg-12 text-center mt-5">
                     <h1>CA2: Data Manipulation & Validation</h1>
-                    <p class="lead">This is Part 2</p>
+                    <p class="lead">This is Part 3</p>
                 </div>
                 <div class="col-lg-2 order-1 mb-3 d-flex flex-column gap-2 mx-auto align-items-stretch">
-                    <button name="1.2.1" class="btn btn-success btn-block" data-sql="SELECT count(hire_date) FROM employees WHERE hire_date = '1991-05-01' LIMIT 100" onClick="reply_click(this)">2.1</button>
-                    <button name="1.2.2" class="btn btn-success btn-block" data-sql="SELECT emp_id, count(emp_id) FROM titles GROUP BY emp_id HAVING count(emp_id) > 2 LIMIT 100" onClick="reply_click(this)">2.2</button>
-                    <button name="1.2.3" class="btn btn-success btn-block" data-sql="SELECT * FROM employees WHERE gender = &#34;F&#34; LIMIT 100" onClick="reply_click(this)">2.3</button>
-                    <button name="1.2.4" class="btn btn-success btn-block" data-sql="SELECT * FROM employees WHERE hire_date &#60; &#34;1986-01-01&#34; AND last_name = &#34;Simmel&#34; LIMIT 100" onClick="reply_click(this)">2.4</button>
-                    <button name="1.2.5" class="btn btn-success btn-block" data-sql="SELECT count(*) AS &#34;Total with B&#34; FROM employees WHERE last_name LIKE &#34;B%&#34; LIMIT 100" onClick="reply_click(this)">2.5</button>
-                    <button name="1.2.6" class="btn btn-success btn-block" data-sql="CREATE TABLE emp_training ( trainer_no INTEGER PRIMARY KEY AUTOINCREMENT, first_name VARCHAR(30) NOT NULL, last_name VARCHAR(30) NOT NULL, t_module VARCHAR(20) NULL)" onClick="reply_click(this)">2.6</button>
-                    <button name="1.2.7" class="btn btn-success btn-block" data-sql="INSERT INTO emp_training (first_name,last_name,t_module) VALUES ('Joe', 'Bloggs', 'Google Docs'); INSERT INTO emp_training (first_name,last_name,t_module) VALUES ('Fred', 'Bloggs', 'Google Sheets');" onClick="reply_click(this)">2.7</button>
-                    <button name="1.2.8" class="btn btn-success btn-block" data-sql="DROP TABLE emp_training" onClick="reply_click(this)">2.8</button>
-                    <button name="1.2.9" class="btn btn-success btn-block" data-sql="ALTER TABLE employees ADD email_address VARCHAR(20)" onClick="reply_click(this)">2.9</button>
-                    <button name="1.2.10" class="btn btn-success btn-block" data-sql="UPDATE employees SET email_address = &#34;gfacello@gmail.com&#34; WHERE emp_id = 10001" onClick="reply_click(this)">2.10</button>
+                    <button name="1.3.1" class="btn btn-success btn-block" data-sql="SELECT * from departments LIMIT 100" onClick="reply_click(this)">3.1</button>
+                    <button name="1.3.2" class="btn btn-success btn-block" data-sql="SELECT emp_id, first_name, last_name from employees LIMIT 100" onClick="reply_click(this)">3.2</button>
+                    <button name="1.3.3" class="btn btn-success btn-block" data-sql="SELECT dept_name from departments LIMIT 100" onClick="reply_click(this)">3.3</button>
+                    <button name="1.3.4" class="btn btn-success btn-block" data-sql="SELECT DISTINCT title from titles ORDER BY title ASC LIMIT 100" onClick="reply_click(this)">3.4</button>
+                    <button name="1.3.5" class="btn btn-success btn-block" data-sql="SELECT * FROM employees ORDER BY first_name, last_name ASC LIMIT 100" onClick="reply_click(this)">3.5</button>
                 </div>
                 <div class="col-lg-10 order-2 border-success">
                     <textarea id="commands" class="mb-5">TEXT
